--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
 
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="com.bachnn.message_kotlin"
+            android:authorities="com.bachnn.messenger"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
